src/styles/main.scss
@use './colors' as colors;
@use './mixins' as mixins;
@import './font';
@import './reset';
@import './utils';


.img-wrapper {
    width: 12.8125rem;
    height: 12.8125rem;
    margin-inline: auto;
    
    &.logo {
        // $size: var(--img-size, 17rem);
        // height: calc($size / 3);
        overflow: hidden;
        
        color: transparent;
        
        background-image: url('/images/rcf-logo.png');
        background-position: center 40%;
        background-repeat: no-repeat;
        background-size: cover;
    }
}

.logo-wrapper {
    background-color: colors.$white;
    width: 100%;
    height: calc(17rem / 3);

    z-index: 2;

    margin-top: 2rem;

    // height: 5rem;
    // background-color: green;
    
    .logo {
        display: block;
        height: 100%;
    }
}


.sticky {
    position: sticky;
    top: 0rem;
}

section.main-wrapper {
    width: 50.875rem;
    max-width: 100%;
    margin-inline: auto;

    &:has(.ticket-form) {
        width: 80rem;
    }


    display: flex;
    flex-direction: column;
    align-items: center;

    .main-content {
        width: 100%;
        padding: 1rem !important;
    }
}


form {
    max-width: 100%;
    display: block;

}
.liners {
    // background-color: red;
    display: flex;
    gap: 1rem;

    hr {
        flex: 1;
        border-color: #CBCBCB99;
        border-radius: 20px;
        display: block;
        // width: 5.9375rem;

        &.fill {
            border-color: colors.$primary;
        }
    }
}


.form-group {
    display: flex;
    // background-color: red;
    align-items: center;
    justify-content: space-between;

    gap: 1rem;

    label {
        flex: 1;
    }


    &.group-col {
        flex-direction: column;
        // background-color: red;
        width: 100%;
    }

    @include mixins.least-small-screen(){
        flex-direction: column;
    }
}

// @include mixins.responsive-options('group-col') {}


.py-2 {
    padding-block: 2rem;
}


.ant-upload-select {
    $size: 15rem;
    width: $size !important;
    height: $size !important;
}

.form-input {
    height: fit-content;
    width: 100%;
    display: block;
    input {
        width: 100%;
        &[type="radio"] {
            
            width: 1rem;
            height: 1rem;
            accent-color: colors.$primary;
            margin-right: .5rem;
        }
        
        &:not([type="radio"]) {
            background-color: transparent;
            display: block;
            padding: .7rem 1rem;
            border: 0.3px solid colors.$primary;
            border-radius: 4px;
            outline: 0;
            // margin-top: .5rem;
        }

        &[type="tel"] {
            outline: 0;
            border: 0;
            box-shadow: none;
        }
    }




    &:has(input[type="tel"]) {
        & > span:last-of-type {
            outline: 1px solid colors.$primary;
            border-radius: 4px;
        }
    }

    &:has(input:disabled) {
        opacity: .6;
    }



    & > div {
        display: flex;
        gap: 2rem;
        margin-top: .3rem;

    }

}


.form-checks {
    border: 0;
    // display: flex;
    // flex-direction: column;

    gap: 1.5rem;

    // background-color: red;
    width: 100%;

    legend {
        border: 0;
        margin: 0;
        color: colors.$primary;

        margin-bottom: 1rem;
    }

    // background-color: red;

    div {
        display: flex;
        flex-wrap: wrap;
        gap: 1rem;
    }


    label {
        cursor: pointer;
        height: fit-content;
        position: relative;

        border: 1px solid #160a3665;
        border-radius: .5rem;


        input {
            width: 0;
            height: 0;
            position: absolute;
            top: -5rem;
        }


        &:has(input:disabled) {
            opacity: .6;
            cursor: not-allowed;
        }


        &:has(input:checked) {
            span {
                background-color: #160a3665;
            }
        }

        span {
            display: flex;
            align-items: center;
            width: fit-content;
    
            gap: .5rem;
            padding: .5rem 1rem;
            border-radius: .5rem;
        }


        span.icon {
            // background-color: red;

            &::before {
                width: 2rem;
                height: 2rem;

                content: '';
                display: inline-block;
                // background-color: green;
                background-position: center;
                background-repeat: no-repeat;
                background-size: cover;
            }

            &.icon-male::before {
                background-image: url('/icons/male-icon.svg');
            }

            &.icon-female::before {
                background-image: url('/icons/female-icon.svg');
            }
            &.icon-check::before {
                background-image: url('/icons/check.svg');
            }

            &.icon-check-double::before {
                background-image: url('/icons/check-double.svg');
            }

            &.icon-cross::before {
                background-image: url('/icons/cross.svg');
            }

            &.icon-greater::before {
                background-image: url('/icons/greater.svg');
            }

            &.icon-greater-cirlce::before {
                background-image: url('/icons/greater-cirlce.svg');
            }
            &.icon-graduation-iv::before {
                background-image: url('/icons/graduation-cap.svg');
            }
            &.icon-graduation-v::before {
                background-image: url('/icons/graduation-cap-1.svg');
            }
        }
    }
}


.avatar-input {

    display: flex;
    flex-direction: column;
    align-items: center;

    & > span:not(.ant-avatar) {
        // background-color: green;
        display: block;
        align-self: flex-start;
    }
}
/* ... */

